[project]
name = "multi-order-order-assistant"
version = "0.1.0"
description = "Layered intelligence for food delivery. Voice-enabled multi-agent assistant built with LangGraph."
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-chroma>=0.2.0",
    "chromadb>=0.5.0",
    "openai>=1.30.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "numpy>=1.26.0",
    "sounddevice>=0.5.0",
    "soundfile>=0.12.0",
]


[project.scripts]
order = "src.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
